--- a/config/templates/package-scripts/prerm.erb
+++ b/config/templates/package-scripts/prerm.erb
@@ -48,6 +48,8 @@ when "aix" -%>
       set -e
     fi
   done
+<% when "freebsd" -%>
+# this is a noop on <%= platform_family %>
 <% else raise "Service management undefined for platform family \"#{platform_family}\"" -%>
 <% end -%>
 }
