--- a/config/templates/package-scripts/postrm.erb
+++ b/config/templates/package-scripts/postrm.erb
@@ -43,15 +43,30 @@ purge_sensu_files()
 
 # only execute this script on rhel-based distros if an rpm uninstall
 # is taking place
-<% if platform_family == "rhel" -%>
+<% case platform_family
+  when "rhel" -%>
 if [ $1 -eq 0 ]; then
-<% end -%>
+  purge_sensu_services
+  purge_sensu_files
+fi
+<% when "debian" -%>
+case "$1" in
+  purge)
+    purge_sensu_services
+    purge_sensu_files
+    ;;
 
+  remove|upgrade|abort-upgrade|abort-remove|abort-deconfigure)
+    ;;
+
+  *)
+    echo "postinst called with unknown argument \`$1'" >&2
+    exit 1
+    ;;
+esac
+<% else -%>
 purge_sensu_services
 purge_sensu_files
-
-<% if platform_family == "rhel" -%>
-fi
 <% end -%>
 
 exit 0
