--- a/config/templates/package-scripts/prerm.erb
+++ b/config/templates/package-scripts/prerm.erb
@@ -56,18 +56,31 @@ when "aix" -%>
 
 # only execute this script on rhel-based distros if an rpm uninstall
 # is taking place
-<% if platform_family == "rhel" -%>
+<% case platform_family
+  when "rhel" -%>
 if [ $1 -eq 0 ]; then
-<% end -%>
+  stop_sensu_services
+fi
+<% when "debian" -%>
+case "$1" in
+  remove|purge)
+    stop_sensu_services
+    ;;
 
+  upgrade|deconfigure)
+    ;;
+
+  *)
+    echo "prerm called with unknown argument \`$1'" >&2
+    exit 1
+    ;;
+esac
+<% else -%>
 stop_sensu_services
+<% end -%>
 
 # wait for services to stop
 sleep 6
-
-<% if platform_family == "rhel" -%>
-fi
-<% end -%>
 
 exit 0
 EOF
