--- a/config/templates/package-scripts/postrm.erb
+++ b/config/templates/package-scripts/postrm.erb
@@ -22,7 +22,7 @@ purge_sensu_services()
   rmssys -s sensu-client > /dev/null 2>&1
   rmssys -s sensu-api > /dev/null 2>&1
   rmssys -s sensu-server > /dev/null 2>&1
-<% when "solaris" -%>
+<% when "solaris2" -%>
   rm -f /lib/svc/manifest/site/sensu-client.xml
 <% when "debian", "rhel", "freebsd", "mac_os_x" -%>
 # this is a noop on <%= platform_family %>
