--- a/config/templates/package-scripts/prerm.erb
+++ b/config/templates/package-scripts/prerm.erb
@@ -35,7 +35,7 @@ stop_sensu_services()
 when "aix" -%>
   set +e
   stopsrc -s sensu-client > /dev/null 2>&1
-<% when "solaris" -%>
+<% when "solaris2" -%>
   svcadm disable sensu-client > /dev/null 2>&1
 <% when "debian", "rhel" -%>
   sensu_services="client server api"
