--- a/config/templates/sensu-gem/sysvinit/sensu-service.erb
+++ b/config/templates/sensu-gem/sysvinit/sensu-service.erb
@@ -231,14 +231,18 @@ start() {
 stop() {
     log_daemon_msg "Stopping $service_name"
 
-    # try pgrep
-    pid=$(pid_pgrep)
+    if [ -f "$pidfile" ] ; then
+        # try the pid file first
+        read pid < "$pidfile"
+    fi
 
-    if [ ! -n "$pid" ]; then
-        # try the pid file
-        if [ -f "$pidfile" ] ; then
-            read pid < "$pidfile"
-        fi
+    # test if pid is running
+    kill -0 $pid > /dev/null 2>&1
+    retval=$?
+
+    if [ $retval -ne 0 ]; then
+        # fall back to pgrep
+        pid=$(pid_pgrep)
     fi
 
     if [ -n "$pid" ]; then
